# mca-viewer-rs

./: Cargo.toml  flame.sh  palette.toml
.cargo/: config.toml
mca-viewer-rs/: .gitignore  Cargo.toml  README.md  prof.sh
mca-viewer-rs/benches/: match.rs
mca-viewer-rs/src/: chunk.rs  loader.rs  render.rs  tile_renderer.rs
nbt/: Cargo.toml
nbt-derive/: Cargo.toml
nbt-derive/src/: derive_deserialize.rs  derive_serialize.rs  lib.rs  util.rs
nbt/src/: arrays.rs  de_std_impls.rs  deserialize.rs  error.rs  helper.rs  lib.rs  serialize.rs  unsafe_de_reuse.rs
src/: app.rs  bitpack.rs  block_id.rs  block_map.rs  chunk.rs  colors.rs  lib.rs  main.rs  palette.rs  render.rs
